# tmiplus

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  README.md  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: ci.yml  release.yml  update-readme-on-release.yml
scripts/: update_readme_install.py
templates/csv/: assignments.csv  initiatives.csv  members.csv  pto.csv
templates/plan/: sample-plan.yml
tests/: test_models.py
tmiplus/: __init__.py
tmiplus/adapters/: base.py
tmiplus/adapters/airtable/: adapter.py
tmiplus/adapters/memory/: adapter.py
tmiplus/config/: loader.py  schema.py
tmiplus/core/: models.py
tmiplus/core/services/: csv_io.py  planner_greedy.py  planner_ilp.py  planner_ilp_pref.py  reports.py  validation.py
tmiplus/core/util/: dates.py  diff.py  io.py
tmiplus/tli/: __main__.py  assignments.py  config_cmd.py  context.py  health.py  helpers.py  initiatives.py  members.py  pto.py  reports.py  tui.py
